# LibChat

./: .gitignore  README.md  app.py  debug_embedding.py  debug_retrieval.py  debug_vector_store.py  final_verification_report.py  fix_vector_store_encoding.py  main.py  requirements.txt  run_web.py  test_json_fix.py
src/chunker/: ast_chunker.py  multi_language_chunker.py
src/github_crawler/: __init__.py  github_crawler.py
src/indexing/: fixed_indexer.py  indexer.py
src/reranking/: __init__.py  reranker.py
src/retrieval/: graph_retriever.py
src/source_inspector/: inspector.py
static/css/: style.css
templates/: index.html
test_encoding_index/: default__vector_store.json  docstore.json  index_store.json
uploads/PlayerOne_Camera_SDK_Windows_V3.8.1/: changelog.txt  readme.txt
uploads/PlayerOne_Camera_SDK_Windows_V3.8.1/examples/: ReadMe.txt
uploads/PlayerOne_Camera_SDK_Windows_V3.8.1/examples/C/: CMakeLists.txt  TestPlayerOneSDKDemo_C.pro  main.c
uploads/PlayerOne_Camera_SDK_Windows_V3.8.1/examples/C#/: TestPlayerOneSDKDemo_CSharp.sln  readme.txt
uploads/PlayerOne_Camera_SDK_Windows_V3.8.1/examples/C++/: CMakeLists.txt  POACamera.cpp  POACamera.h  TestPlayerOneSDKDemo_CPP.pro  main.cpp
uploads/PlayerOne_Camera_SDK_Windows_V3.8.1/include/: ConvFuncs.h  PlayerOneCameraDLL.cs
uploads/PlayerOne_Camera_SDK_Windows_V3.8.1/lib/x64/: PlayerOneCamera.lib
uploads/PlayerOne_Camera_SDK_Windows_V3.8.1/lib/x86/: PlayerOneCamera.lib
uploads/PlayerOne_Camera_SDK_Windows_V3.8.1/python/: POA_Camera_Test.py  pyPOACamera.py  readme.txt
(+5 files in other folders)
